# backup-reporter

./: .gitignore  .gitlab-ci.yml  README.md  collector.py  dataclass.py  docker-compose.yml  main.py  pyproject.toml  reporter_client.py  reporters.py  sheets.py  start.sh  update_sheets.py
backup_reporter/: collector.py  dataclass.py  main.py  reporters.py  utils.py
docs/config-examples/: aws.conf  collector.conf  reporter-aws.conf  reporter-files-bucket.conf  reporter-mariadb-aws.conf  reporter-selectel.conf  selectel.conf
